--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
                     </div>
                     <div class="tab-contents" id="education">
                         <ul>
-                            <li><span>2024-gap | University of Gothenburg</span><br> Master in Information Technology and Learning</li>
-                            <li><span>2023-2024 | Lund University</span><br>Master in Finance</li>
-                            <li><span>2019-2023 | Hebei University of Technology</span><br>Bachelor in Finance</li>
+                            <li><span>2024-gap | University of Gothenburg | Master in IT & Learning</span><br>Modules: Web Design; Digital Technologies; Data Analysis.</li>
+                            <li><span>2023-2024 | Lund University | Master in Finance</span><br>GPA: B/A-U Scale<br>Modules: Financial Valuation; Corporate Finance; Managerial Finance.</li>
+                            <li><span>2019-2023 | Hebei University of Technology | Bachelor in Finance</span><br>GPA: 3.51/4<br>Modules: Financial Analysis; Economic Law; Management Accounting.<br></li>
                         </ul>
                     </div>
             </div>
@@ -110,32 +110,32 @@
         </div>
     </div>
 </div>
-<!-- -------------------portfolio--------------- -->
+<!-- -------------------portfolio/My work--------------- -->
 <div id="portfolio">
     <div class="container">
         <h1 class="sub-title">My Work</h1>
         <div class="work-list">
             <div class="work">
-                <img src="images/work-1.JPG">
+                <img src="images_new/work-1.JPG">
                 <div class="layer">
-                    <h3>Python Project</h3>
-                    <p>Prediction & Risk Managment<p>
+                    <h3>Python Projects</h3>
+                    <p> <p>
                     <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="work">
-                <img src="images/work-2.JPG">
+                <img src="images_new/work-2.JPG">
                 <div class="layer">
                     <h3>Java Projects</h3>
-                    <p>Web design using Java, HTML, CSS.<p>
+                    <p> <p>
                     <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="work">
-                <img src="images/work-3.JPG">
+                <img src="images_new/work-3.JPG">
                 <div class="layer">
-                    <h3>Reports</h3>
-                    <p>Published articles<p>
+                    <h3>Content Writting</h3>
+                    <p> <p>
                     <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
