--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <h1 class="sub-title">My Work</h1>
         <div class="work-list">
             <div class="work">
-                <img src="images_new/work-1.JPG">
+                <img src="images_new/work-1.jpg">
                 <div class="layer">
                     <h3>Python Projects</h3>
                     <p> <p>
@@ -124,7 +124,7 @@
                 </div>
             </div>
             <div class="work">
-                <img src="images_new/work-2.JPG">
+                <img src="images_new/work-2.jpg">
                 <div class="layer">
                     <h3>Java Projects</h3>
                     <p> <p>
@@ -132,7 +132,7 @@
                 </div>
             </div>
             <div class="work">
-                <img src="images_new/work-3.JPG">
+                <img src="images_new/work-3.jpg">
                 <div class="layer">
                     <h3>Content Writting</h3>
                     <p> <p>
