--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
         <div class="row">
             <div class="contact-left">
                 <h1 class="sub-title">Contact Me</h1>
-                <p><i class="fa-solid fa-paper-plane"></i> yqq468707631@gmail.com</p>
-                <p><i class="fa-solid fa-square-phone"></i> +46 764280362</p>
+                <p class="email"><i class="fa-solid fa-paper-plane"></i> yqq468707631@gmail.com</p>
+                <p class="phone"><i class="fa-solid fa-square-phone"></i> +46 764280362</p>
                 <div class="social-icon">     
                     <a href="https://www.linkedin.com/in/qianqian9712/"><i class="fa-brands fa-linkedin"></i></a>
                     <a href="https://github.com/QianqianYang11"><i class="fa-brands fa-github"></i></a>
