--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <ul id="sidemenu">
                 <li><a href="#header">Home</a></li>
                 <li><a href="#about">About</a></li>
-                <li><a href="#services">Services</a></li>
+                <li><a href="#services">Interest</a></li>
                 <li><a href="#portfolio">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
@@ -24,7 +24,7 @@
             <i class="fa-solid fa-bars" onclick="openmenu()"></i>
         </nav>
         <div class="header-text">
-            <p class="finance-text">Finance Graduate</p>
+            <p class="finance-text">Master in IT & Learning</p>
             <h1>Hi, I'm <span>Qianqian</span><br><span class="dive-text"> Dive into my work here!</span></h1>
         </div>
         <div class="important-icon">     
@@ -44,40 +44,36 @@
             </div>
             <div class="about-col-2">
                 <h1 class="sub-title">About Me</h1>
-                <p> Hello! I'm Qianqian, a finance graduate from Lund University. I am currently based in Gothenburg, Sweden and I am open for relocation. With experience in consulting and equity research, I am skilled in communication and financial analysis. I am a social person who thrives in cross-functional environments. My passion for business and IT area drives my commitment to continuous learning and personal growth, and I look forward to new opportunities ahead. </p>
+                <p> Hello! I'm Qianqian, studying Master’s in IT & Learning at the University of Gothenburg. I am curious about learning the new applications of technology within the current world, including the educational area, finance industry, and tech industry. This program provides me with both the theoretical framework and support to study and explore more areas that I am not yet familiar with. For further study, I am interested in learning more about finding the most effective and efficient ways of learning or training, as well as human-computer interaction.</p>
                     <div class="tab-titles">
-                        <p class="tab-links" data-tab="skills" onclick="opentab('skills')">Skills</p>
-                        <p class="tab-links" data-tab="experience" onclick="opentab('experience')">Experience</p>
-                        <p class="tab-links" data-tab="education" onclick="opentab('education')">Education</p>
+                        <p class="tab-links" data-tab="skills" onclick="opentab('skills')">Ability</p>
+                        <p class="tab-links" data-tab="experience" onclick="opentab('experience')">Current</p>
+                        <p class="tab-links" data-tab="education" onclick="opentab('education')">Future</p>
                     </div>
                     <div class="tab-contents active-tab" id="skills">
                         <ul>
-                            <li><span>Customer Service</span><br>Communication: English and Mandarin</li>
-                            <li><span>Financial Analysis</span><br>Financial Modeling & Data Analysis: Python</li>
-                            <li><span>Web Design</span><br>Frontend Web Development: Java, HTML, CSS</li>
+                            <li><span>Design Learning</span><br>Learning Theory: Behaviorism, Cognitivism, Constructivism</li>
+                            <li><span>Academic Writing</span><br>Online Assignment & Course Paper</li>
+                            <li><span>Presentation Skills</span><br>Group Work & In-class Presentation</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="experience">
                         <ul>
-                            <li><span>2022-2023 | Consultant | Hoxing Education Consulting</span><br>Performed needs assessments for clients to develop tailored training programs;<br>
-                                Organized workshops and training sessions to enhance learning outcomes;<br>
-                                Prepared reports about client recommendations and strategic action plans.
+                            <li><span>Master in IT & Learning Year 1 </span><br>● Technology, knowledge and learning: An introduction<br>
+                                ● Literacies in a Digital World<br>
+                                ● Applied Research Methods and Design for Information Technologies and Learning
                                 </li>
-                            <li><span>2021-2021 | Equity Research Intern | China Securities</span><br>Collected financial data and macroeconomic data through the database;<br>
-                                Performed financial analysis, competitive analysis, and company valuation;<br>
-                                Wrote research reports by typesetting, drawing, and summarizing.
-                                </li>
-                            <li><span>2019-2019 | Finance Intern | Jiangsu Binhai Rural Commercial Bank</span><br>Participated in the customer guidance at the bank;<br>
-                                Promoted and sold financial products of debt to customers;<br>
-                                Collected data about rural debt and input the data into the bank system.
+                            <li><span>Master in IT & Learning Year 2 </span><br>● Optional Course<br>
+                                ● Optional Course<br>
+                                ● Master's Thesis in IT and Learning
                                 </li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="education">
                         <ul>
-                            <li><span>2024-gap | University of Gothenburg | Master in IT & Learning</span><br>Modules: Web Design; Digital Technologies; Data Analysis.</li>
-                            <li><span>2023-2024 | Lund University | Master in Finance</span><br>GPA: B/A-U Scale<br>Modules: Financial Valuation; Corporate Finance; Managerial Finance.</li>
-                            <li><span>2019-2023 | Hebei University of Technology | Bachelor in Finance</span><br>GPA: 3.51/4<br>Modules: Financial Analysis; Economic Law; Management Accounting.<br></li>
+                            <li><span>Master Thesis</span><br>● The impact of stock market simulators on financial literacy;<br> ● Portfolio optimization within the commodity market.</li>
+                            <li><span>Personal Plan</span><br>● Be healthy both mentally and physically;<br>● Develop some additional Hobbies.</li>
+                            <li><span>Professional Plan</span><br>● Go to industry; <br>● Work in a more technical job. <br></li>
                         </ul>
                     </div>
             </div>
@@ -87,25 +83,25 @@
 <!-- ----------------services------------------- -->
 <div id="services">
     <div class="container">
-        <h1 class="sub-title">My Services</h1>
+        <h1 class="sub-title">My Interest</h1>
         <div class="services-list">
             <div>
-                <i class="fa-solid fa-handshake"></i>
-                <h2>Customer Service</h2>
-                <p>Communication, quick responses, and client satisfaction.</p>
-                <!-- <a href="#">Learn more</a> -->
+                <i class="fa-solid fa-desktop tech-icon"></i> Information Technology
             </div>
             <div>
-                <i class="fa-solid fa-compass-drafting"></i>
-                <h2>Financial Analysis</h2>
-                <p>Budgeting, forecasting, and performance evaluation.</p>
-                <!-- <a href="#">Learn more</a> -->
+                <i class="fa-solid fa-handshake interaction-icon"></i> Human-Computer Interaction
             </div>
             <div>
-                <i class="fa-solid fa-desktop"></i>
-                <h2>Web Design</h2>
-                <p>Custom websites for enhanced engagement.</p>
-                <!-- <a href="#">Learn more</a> -->
+                <i class="fa-solid fa-server platform-icon"></i> Digital Platform
+            </div>
+            <div>
+                <i class="fa-solid fa-graduation-cap learning-icon"></i> Experimental Learning
+            </div>
+            <div>
+                <i class="fa-solid fa-comments-dollar finance-icon"></i> Financial Literacy
+            </div>
+            <div>
+                <i class="fa-solid fa-scale-unbalanced portfolio-icon"></i> Portfolio Optimization
             </div>
         </div>
     </div>
@@ -116,31 +112,68 @@
         <h1 class="sub-title">My Projects</h1>
         <div class="work-list">
             <div class="work">
-                <img src="images_new/work-1.jpg">
-                <div class="layer">
-                    <h3>Python Projects</h3>
-                    <p> <p>
-                    <a href="https://github.com/QianqianYang11?tab=repositories&q=&type=&language=python&sort="><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                <div class="work-content">
+                    <img src="images_new/work-1.jpg" alt="Course Paper">
+                    <div class="layer">
+                        <h3>Course Paper: Virtual Investment for Real Gains</h3>
+                        <p>This study aims to analyze how the digital stock market simulators will influence the financial literacy and education of students at the university level. Relevant studies assess the usefulness of using digital simulators, the actual impacts for students are various, including the cognitive, behavioral, and affective learning dimensions. Understanding these various impacts is essential for educators in the business area to design curricula effectively and efficiently for students.
+                        </p>
+                    </div>
+                </div>
+                <div class="work-description">
+                    <p style="margin-top: 15px; font-size: 22px;margin-bottom: 15px; color: 823D32; font-weight: bold;">Take Aways </p>
+                    <p style="font-size: 18px; line-height: 1.5;">
+                        ● Within stock market simulators, individuals can take on the role of investors, where they can invest in different stocks and then build on their investment portfolios. <br>
+                        ● The goal of finance literacy specializing in stock market trading is about modern portfolio theory, fundamental and technical analysis, behavioral finance, and financial risk management. <br>
+                        ● Relevant studies assess the usefulness of using digital simulators, the actual impacts for students are various, including the cognitive, behavioral, and affective learning dimensions. <br>
+                        ● Three themes are generated about the impact of stock market simulators on financial literacy for students in higher education, which are the application of financial literacy to practice, changes in risk tolerance, and financial decision-making skills. <br>
+                        ● Instructional designers specializing in financial literacy are responsible for promoting more active and flexible learning experiences for students within higher education.
+                        </p>
+                        <a href="images/Course_Paper.pdf" download class="btn" style="margin-bottom: 5px; margin-top: 15px;">See More</a>
                 </div>
             </div>
             <div class="work">
-                <img src="images_new/work-2.jpg">
-                <div class="layer">
-                    <h3>PowerBI</h3>
-                    <p> <p>
-                    <a href="https://github.com/QianqianYang11?tab=repositories&q=Powerbi&type=&language=&sort="><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                <div class="work-content">
+                    <img src="images_new/work-2.jpg" alt="PowerBI">
+                    <div class="layer">
+                        <h3>Online Assignment: Learning Not to Take the Bait</h3>
+                        <p>The online Assignment is about identifying, reading, and summarizing a scientific article, which is Learning Not to Take the Bait: A Longitudinal Examination of Digital Training Methods and Overlearning on Phishing Susceptibility. Based on the previous study that supports digital training as a way to reduce phishing susceptibility, this study examines the effectiveness and retention of two different digital training methods for phishing awareness over a longer period, and whether overlearning can improve these outcomes. Results show that compared to rule-based training, mindfulness training resulted in greater retention in terms of better email discrimination and less susceptibility to phishing attacks but similar levels of caution towards phishing. However, overlearning provided limited support for phishing skill retention. </p>
+                    </div>
+                </div>
+                <div class="work-description">
+                    <p style="margin-top: 15px; font-size: 22px;margin-bottom: 15px; color: 823D32; font-weight: bold;">Take Aways </p>
+                    <p style="font-size: 18px; line-height: 1.5;">
+                        ● This study provides training sessions of rule-based training, mindfulness training, and control group training for participant students. All the training groups included some participants who received the overlearning procedure.<br>
+                        ● The evaluation is conducted through email identification tests and mock phishing messages delivered to their inboxes over both the short term and long term.<br>
+                        ● This article involves three groups with different time periods for comparison, and an additional factor of whether overlearning is implemented, resulting in seven hypotheses.<br>
+                        ● Different age groups, such as teenagers, middle-aged individuals, or the elderly, might have varying susceptibilities to scams. Many further studies could be considered or discussed.<br>
+                        ● In this AI-driven era where phishing activities become increasingly complex and even pass through the security filter, the personal level of anti-phishing is really helpful.
+                        </p>
+                        <a href="images/Online_Assignment.pdf" download class="btn" style="margin-bottom: 5px; margin-top: 15px;">See More</a>
                 </div>
             </div>
             <div class="work">
-                <img src="images_new/work-3.jpg">
-                <div class="layer">
-                    <h3>Java Projects</h3>
-                    <p> <p>
-                    <a href="https://github.com/QianqianYang11?tab=repositories&q=&type=&language=html&sort="><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                <div class="work-content">
+                    <img src="images_new/work-3.jpg" alt="Java Projects">
+                    <div class="layer">
+                        <h3>Group Work: Constructivism Theory</h3>
+                        <p>Group work is about summarizing the perspective in terms of its theoretical conceptualizations for constructivism. Constructivism is about mental activity, the environment, and experience. It focuses on the interaction between the environment and mind, where humans create meaning through cumulative elaboration and reflection. Learning occurs by creating meaning from experiences, and memory is constructed through a history of interactions. The flexible use of pre-existing knowledge is preferred over rote recall. 
+                        </p>
+                    </div>
+                </div>
+                <div class="work-description">
+                    <p style="margin-top: 15px; font-size: 22px;margin-bottom: 15px; color: 823D32; font-weight: bold;">Take Aways </p>
+                    <p style="font-size: 18px; line-height: 1.5;">
+                        ● Learning is shaped by personal experiences, requiring an examination of the learner’s experiences. Transfer of knowledge occurs through authentic tasks and reflection.<br>
+                        ● Emphasizes active engagement, problem-solving skills, and assessment focused on knowledge transfer. Collaboration and reflection are encouraged.<br>
+                        ● Focuses on collaboration, multiple perspectives, and self-chosen learning paths. Flexible learning objectives promote deeper engagement and critical thinking.<br>
+                        ● Constructivist assessments focus on peer review, virtual exhibitions, and critical discussions.<br>
+                        ● Constructivist approaches can struggle with minimally guided instructions, lack of tangible objects, and a one-size-fits-all curriculum.
+                        </p>
+                        <a href="images/Constructivism.pdf"  download class="btn" style="margin-bottom: 5px; margin-top: 15px;">See More</a>
                 </div>
             </div>
         </div>
-        <a href="https://github.com/QianqianYang11?tab=repositories" class="btn">See more</a>
     </div>
 </div>
 <!-- ---------------------contact----------------- -->
@@ -157,7 +190,7 @@
                     <a href="https://www.instagram.com/yu.yu2673/"><i class="fa-brands fa-instagram"></i></a>
                     <a href="https://www.facebook.com/profile.php?id=61551016870464%5C"><i class="fa-brands fa-facebook"></i></a>
                 </div>
-                <a href="images/My-CV.pdf" download class="btn btn2">Download CV</a>
+                <a href="images/CV.pdf" download class="btn btn2">Download CV</a>
             </div>
             <div class="contact-right">
                 <form name="submit-to-google-sheet">
