--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     </div>
                     <div class="tab-contents" id="experience">
                         <ul>
-                            <li><span>2022-2023 | Consultant | Hoxing Education Consulting</span><br>Performed needs assessments for clients to develop tailored training programs;<br>
+                            <li><span>2022-2023 | Consultant | Jiangsu Hoxing Education Consulting</span><br>Performed needs assessments for clients to develop tailored training programs;<br>
                                 Organized workshops and training sessions to enhance learning outcomes;<br>
                                 Prepared reports about client recommendations and strategic action plans.
                                 </li>
