--- a/index.html
+++ b/index.html
@@ -59,17 +59,21 @@
                     </div>
                     <div class="tab-contents" id="experience">
                         <ul>
-                            <li><span>2022-2023 | Consultant | Jiangsu Hoxing Education Consulting</span><br>Performed needs assessments for clients to develop tailored training programs;<br>
-                                Organized workshops and training sessions to enhance learning outcomes;<br>
-                                Prepared reports about client recommendations and strategic action plans.
+                            <li><span>2022-2023 | Consultant | Jiangsu Hoxing Education Consulting</span><br>● Performed needs assessments for clients to develop tailored training programs;<br>
+                                ● Organized workshops and training sessions to enhance learning outcomes;<br>
+                                ● Prepared reports about client recommendations and strategic action plans.
                                 </li>
-                            <li><span>2021-2021 | Equity Research Intern | China Securities</span><br>Collected financial data and macroeconomic data through the database;<br>
-                                Performed financial analysis, competitive analysis, and company valuation;<br>
-                                Wrote research reports by typesetting, drawing, and summarizing.
+                            <li><span>2021-2021 | Equity Research Intern | China Securities</span><br>● Collected financial data and macroeconomic data through the database;<br>
+                                ● Performed financial analysis, competitive analysis, and company valuation;<br>
+                                ● Wrote research reports by typesetting, drawing, and summarizing.
                                 </li>
-                            <li><span>2019-2019 | Finance Intern | Jiangsu Binhai Rural Commercial Bank</span><br>Participated in the customer guidance at the bank;<br>
-                                Promoted and sold financial products of debt to customers;<br>
-                                Collected data about rural debt and input the data into the bank system.
+                            <li><span>2020-2021 | Marketing Assistant | Hebei University of Technology</span><br>● Produced publicity videos and digital content for online platforms;<br>
+                                ● Organized alumni interviews and lecturer events;<br>
+                                ● Delivered presentations about the marketing performance.
+                                </li>
+                            <li><span>2019-2019 | Finance Intern | Jiangsu Binhai Rural Commercial Bank</span><br>● Participated in the customer guidance at the bank;<br>
+                                ● Promoted and sold financial products of debt to customers;<br>
+                                ● Collected data about rural debt and input the data into the bank system.
                                 </li>
                         </ul>
                     </div>
