--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                     <div class="tab-titles">
                         <p class="tab-links" data-tab="skills" onclick="opentab('skills')">Skills</p>
                         <p class="tab-links" data-tab="experience" onclick="opentab('experience')">Experience</p>
+                        <p class="tab-links" data-tab="part-time" onclick="opentab('part-time')">Part-time</p>
                         <p class="tab-links" data-tab="education" onclick="opentab('education')">Education</p>
                     </div>
                     <div class="tab-contents active-tab" id="skills">
@@ -67,19 +68,31 @@
                                 ● Performed financial analysis, competitive analysis, and company valuation;<br>
                                 ● Wrote research reports by typesetting, drawing, and summarizing.
                                 </li>
-                            <li><span>2020-2021 | Marketing Assistant | Hebei University of Technology</span><br>● Produced publicity videos and digital content for online platforms;<br>
-                                ● Organized alumni interviews and lecturer events;<br>
-                                ● Delivered presentations about the marketing performance.
-                                </li>
                             <li><span>2019-2019 | Finance Intern | Jiangsu Binhai Rural Commercial Bank</span><br>● Participated in the customer guidance at the bank;<br>
                                 ● Promoted and sold financial products of debt to customers;<br>
                                 ● Collected data about rural debt and input the data into the bank system.
                                 </li>
                         </ul>
                     </div>
+                    <div class="tab-contents" id="part-time">
+                        <ul>
+                            <li><span>2024-2024 | Part-time Distributor | Svensk Direktreklam</span><br>● Delivered newspapers and advertisements to the mailboxes;<br>
+                                ● Updated and submitted distribution status on the company website;<br>
+                                ● Assisted with additional distribution tasks during staff shortages.
+                                </li>
+                            <li><span>2021-2021 | Education Intern | Xinjiang Education Bureau</span><br>● Developed and provided teaching materials for pre-school education;<br>
+                                ● Arranged extracurricular activities to foster teamwork among kids;<br>
+                                ● Offered teaching initiatives on-site for preschool students.
+                                </li>
+                            <li><span>2020-2021 | Marketing Assistant | Hebei University of Technology</span><br>● Produced publicity videos and digital content for online platforms;<br>
+                                ● Organized alumni interviews and lecturer events;<br>
+                                ● Delivered presentations about the marketing performance.
+                                </li>
+                        </ul>
+                    </div>
                     <div class="tab-contents" id="education">
                         <ul>
-                            <li><span>2024-gap | University of Gothenburg | Master in IT & Learning</span><br>Modules: Web Design; Digital Technologies; Data Analysis.</li>
+                            <li><span>2024-now | University of Gothenburg | Master in IT & Learning</span><br>Modules: Web Design; Digital Technologies; Data Analysis.</li>
                             <li><span>2023-2024 | Lund University | Master in Finance</span><br>GPA: B/A-U Scale<br>Modules: Financial Valuation; Corporate Finance; Managerial Finance.</li>
                             <li><span>2019-2023 | Hebei University of Technology | Bachelor in Finance</span><br>GPA: 3.51/4<br>Modules: Financial Analysis; Economic Law; Management Accounting.<br></li>
                         </ul>
