--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <i class="fa-solid fa-bars" onclick="openmenu()"></i>
         </nav>
         <div class="header-text">
-            <p class="finance-text">Finance Graduate</p>
+            <p class="finance-text">Business & Data Analyst</p>
             <h1>Hi, I'm <span>Qianqian</span><br><span class="dive-text"> Dive into my work here!</span></h1>
         </div>
         <div class="important-icon">     
