--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
                     </div>
                     <div class="tab-contents" id="education">
                         <ul>
-                            <li><span>2024-now | University of Gothenburg | Master in IT & Learning</span><br>Modules: Web Design; Digital Technologies; Data Analysis.</li>
-                            <li><span>2023-2024 | Lund University | Master in Finance</span><br>GPA: B/A-U Scale<br>Modules: Financial Valuation; Corporate Finance; Managerial Finance.</li>
-                            <li><span>2019-2023 | Hebei University of Technology | Bachelor in Finance</span><br>GPA: 3.51/4<br>Modules: Financial Analysis; Economic Law; Management Accounting.<br></li>
+                            <li><span>2024-now | University of Gothenburg | Master in IT & Learning</span><br>● Modules: Web Design; Digital Technologies; Data Analysis.</li>
+                            <li><span>2023-2024 | Lund University | Master in Finance</span><br>● GPA: B/A-U Scale<br>● Modules: Financial Valuation; Corporate Finance; Managerial Finance.</li>
+                            <li><span>2019-2023 | Hebei University of Technology | Bachelor in Finance</span><br>● GPA: 3.51/4<br>● Modules: Financial Analysis; Economic Law; Management Accounting.<br></li>
                         </ul>
                     </div>
             </div>
